-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.2 - Nov 10, 2018

 + GUI: support custom themes (theme.conf file)
 + GUI: 'File'->'Theme: Dark' - a simple dark theme
 * GUI: instant playlist switching
 - GUI: button text could be empty if no icon is set (FF v18.10 bug)


fmedia v1.1 - Oct 14, 2018

 + GUI: use icons on playback control buttons
 + GUI: load multiple playlists from previous session on startup
 * GUI: faster playlists (show 1000 items 5x faster)
 - GUI: 'Add URL' command didn't work for radio stream URLs (v0.23 bug)
 + GUI: 'List' -> 'Random' - Choose the next track randomly
 + --random - Choose the next track randomly
 + TUI: show track number
 + core: on-demand modules loading (all except UI)
   Now the modules don't affect fmedia startup time.
 + core: "prevent_sleep" config setting - Don't allow the system to put
    itself to sleep after some time of inactivity


fmedia v1.0.1 - Sep 17, 2018

 - .m4a write: fix segfault (v1.0 bug)
 - gui: tray icon disappeared (v1.0 bug)


fmedia v1.0 - Sep 8, 2018

 + macOS: CoreAudio playback & capture
 + delay modules loading (alac ape avi mkv mp4 mpc soxr wav wavpack)
 + --stop-dblevel=DB[;TIME][;MINTIME] - If MINTIME is specified,
   stop only after MINTIME time has passed
 - file: windows: reading from EOF position doesn't result in an error


fmedia v0.37 - Aug 5, 2018

 + --include='WILDCARD[;WILDCARD]' - Only include files matching a wildcard (case-insensitive)
 + --exclude='WILDCARD[;WILDCARD]' - Exclude files & directories matching a wildcard (case-insensitive)
 + --until=playback-end - Stop recording when the last playback track is finished
 + net.http: connect_timeout config setting
 + net.icy: support OGG stream
 *! queue: start the next track in list after an error has occurred with the current track
    + queue: next_if_error config setting
 - mixer: --mix didn't work